[gd_scene load_steps=2 format=3 uid="uid://dgphyqd4m4aek"]

[ext_resource type="Script" uid="uid://pvr7d2qvdn8j" path="res://song_select.gd" id="1_yyygw"]

[node name="SongSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yyygw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="SongList" type="ItemList" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
allow_reselect = true
same_column_width = true

[node name="InfoPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SongInfo" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel/MarginContainer"]
layout_mode = 2
